Fix spacing and colors.

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -12,10 +12,22 @@ body {
   color: black !important;
 }
 
+ul {
+  background-color: white;
+}
+
 li {
-  display: block !important;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  border: 1px solid black;
 }
 
 button {
   background-color: rgb(180, 180, 180) !important;
+}
+
+.col-xs-12 {
+  background-color: gray !important;
+  padding: 0px 20px 20px;
+  height: 2000px;
 }
